--- a/src/partials/team-members.html
+++ b/src/partials/team-members.html
@@ -1,29 +1,38 @@
-<div class="cz-split-panels-combiner">
+<div class="cz-split-panels">
     <div class="cz-section">
         <div class="cz-diamond-grid">
             <div class="cz-diamond-grid__inner">
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond-grid__line"></div>
                     <div class="cz-diamond" cz-diamond=""></div>
                 </div>
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond-grid__line"></div>
                     <div class="cz-diamond" cz-diamond=""></div>
                 </div>
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond-grid__line"></div>
                     <div class="cz-diamond" cz-diamond=""></div>
                 </div>
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond-grid__line"></div>
                     <div class="cz-diamond" cz-diamond=""></div>
                 </div>
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond-grid__line"></div>
                     <div class="cz-diamond" cz-diamond=""></div>
                 </div>
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond-grid__line"></div>
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div class="cz-diamond" cz-diamond=""></div>
+                </div>
+                <div class="cz-diamond-grid__block">
                     <div class="cz-diamond" cz-diamond=""></div>
                 </div>
             </div>
