Improved styling of footer blocks on different devices

--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -12,7 +12,7 @@ $cz-color-secondary:        rgb(32,193,203);        // #20c1cb
 $cz-color-secondary-dark:   rgb(4,156,165);         // #049ca5
 
 // Fills
-$cz-fill-grey-light:        rgb(49,65,74);          // #31414a
+$cz-fill-grey-light:        rgb(105,111,114);       // #696F72
 $cz-fill-grey:              rgb(32,42,47);          // #202a2f
 $cz-fill-grey-dark:         rgb(31,36,39);          // #1e2326
 $cz-fill-light:             rgb(255,255,255);       // #ffffff
@@ -21,7 +21,7 @@ $cz-fill-light:             rgb(255,255,255);       // #ffffff
 $cz-text-heading:           $cz-fill-grey;
 $cz-text-heading-inverse:   $cz-fill-light;
 $cz-text:                   $cz-fill-grey-light;
-$cz-text-inverse:           rgba(255, 255, 255, .7);
+$cz-text-inverse:           $cz-fill-light;
 
 // Contexts
 $cz-color-shadow:           rgb(226,231,233);       // #e2e7e9
@@ -36,4 +36,3 @@ $cz-max-width-desktop: 1000px;
 
 // Named colors
 $cz-background: $cz-fill-grey-dark;
-$cz-text-inverse: $cz-fill-light;
