--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -5,6 +5,7 @@
 }
 
 .cz-footer__blocks {
+    background-color: $cz-fill-grey-dark;
 
     // TODO: Decide on a proper breakpoint, 520 is too small
     @media screen and (min-width: 900px) {
@@ -16,13 +17,22 @@
     position: relative; // Hack for weird color issue
     pointer-events: none; // Pass click through to triangles
 
+    @media screen and (min-width: $cz-breakpoint-desktop) {
+        &:nth-of-type(1) {
+            background-color: rgba(26, 33, 26, .5);
+        }
+
+        &:nth-of-type(2) {
+            background-color: rgba(0, 0, 0, .25);
+        }
+    }
+
     // TODO: Decide on a proper breakpoint, 520 is too small
     @media screen and (min-width: 900px) {
         float: left;
         width: 50%;
         height: 465px;
     }
-
 }
 
 .cz-footer__triangles {
@@ -48,6 +58,7 @@
     font-size: 80px;
     text-transform: uppercase;
     line-height: 44px;
+    padding: 0 20px;
 
     background-color: $cz-color-primary;
 
