Colleague content set-up

--- a/src/partials/team-members.html
+++ b/src/partials/team-members.html
@@ -39,11 +39,17 @@
         </div>
     </div>
     <div cz-diamond-split-panel class="cz-split-panels cz-split-panels--overlay" style="display: none">
-        <h1 class="cz-split-panels__title">Huib</h1>
+        <h2 class="cz-heading-1 cz-split-panels__title">Huib</h2>
         <div class="cz-split-panels__wrapper">
             <div class="cz-split-panels__panel cz-split-panels__panel--left">
                 <div class="cz-split-panels__panel-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum consectetur eros, a molestie elit maximus sed. Ut vitae sapien justo. Suspendisse ultricies semper risus vel consequat.</p>
+                    <div class="cz-colleague-content">
+                        <span class="cz-colleague-content__quote">Hmm, that framework sounds delicious</span>
+                        <h3>Likes</h3>
+                        <p>Devouring websites and travel</p>
+                        <h3>Huib schrijft monsterlijk goede code voor...</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum consectetur eros, a molestie elit maximus sed. Ut vitae sapien justo. Suspendisse ultricies semper risus vel consequat.</p>
+                    </div>
                 </div>
             </div>
             <div class="cz-split-panels__panel cz-split-panels__panel--right">
