Set-up for demonstration to Huib

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,10 @@
         <li>
             <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/')"></div> 
             <div class="cz-carousel__content">
-                <h1 class="cz-carousel__title cz-divider">Front end coding</h1>
+                <h1 class="cz-carousel__title">Front end coding</h1>
+                <div class="cz-divider-timer">
+                    <div class="cz-divider-timer__divider"></div>
+                </div>
                 <p class="cz-carousel__slogan">
                     [ 'Interactieve', <br />
                     'Gebruiksvriendelijke', <br />
