--- a/src/main.scss
+++ b/src/main.scss
@@ -23,6 +23,7 @@
 
 /* Components */
 @import 'scss/components/divider';
+@import 'scss/components/divider-timer';
 @import 'scss/components/section';
 @import 'scss/components/footer';
 @import 'scss/components/container';
