Changes after discussion with Huib

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
             <div class="cz-carousel__content">
                 <h1 class="cz-carousel__title">Front end coding</h1>
                 <div class="cz-divider-timer">
-                    <div class="cz-divider-timer__divider"></div>
+                    <div class="cz-divider-timer__inner"></div>
                 </div>
                 <p class="cz-carousel__slogan">
                     [ 'Interactieve', <br />
