Did some improvements suggested in PR comments

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="cz-footer">
     <div class="cz-footer__blocks">
-        <canvas class="cz-footer__triangles cz-triangles" width="0" height="0"></canvas>
+        <canvas id="cz-triangles-footer" class="cz-footer__triangles cz-triangles" width="0" height="0"></canvas>
 
         <section class="cz-footer__block">
             <div class="cz-footer__block-container container">
@@ -17,11 +17,13 @@
         <section class="cz-footer__block">
             <div class="cz-footer__block-container container">
                 <h2 class="cz-heading-2 heading-inverse">CODEZILLA B.V.</h2>
-                <p class="cz-text">
-                    Hoogoorddreef 9<br />
-                    1101 BA AMSTERDAM (Nabij de Arena)<br />
-                    KVK nr. 62653229
-                </p>
+                <address>
+                    <p class="cz-text">
+                        Hoogoorddreef 9<br />
+                        1101 BA AMSTERDAM (Nabij de Arena)<br />
+                        KVK nr. 62653229
+                    </p>
+                </address>
                 <p class="cz-text">
                     Tel: <a class="cz-text" href="tel:+31 (0) 20 3120 458">020 - 3120 458</a><br />
                     Email: <a class="cz-text" href="mailto:info@codezilla.nl">info@codezilla.nl</a>
