--- a/src/scss/components/divider-timer.scss
+++ b/src/scss/components/divider-timer.scss
@@ -7,11 +7,7 @@
     background: #fff;
     overflow: hidden;
 
-    @media screen and (min-width: $cz-breakpoint-desktop) {
-        width: 150px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    @include cz-divider-center-desktop();
 }
 
 //animate transform: translateX with GreenSock
