--- a/src/main.scss
+++ b/src/main.scss
@@ -29,6 +29,7 @@
 @import 'scss/components/menu';
 @import 'scss/components/text';
 @import 'scss/components/media-block';
+@import 'scss/components/team-member-detail';
 
 @import 'scss/components/diamond-grid';
 @import 'scss/components/split-panel';
