--- a/src/partials/team-members.html
+++ b/src/partials/team-members.html
@@ -43,11 +43,11 @@
         <div class="cz-split-panels__wrapper">
             <div class="cz-split-panels__panel cz-split-panels__panel--left">
                 <div class="cz-split-panels__panel-content">
-                    <div class="cz-colleague-content">
-                        <span class="cz-colleague-content__quote">Hmm, that framework sounds delicious</span>
-                        <h3>Likes</h3>
+                    <div class="cz-team-member-detail">
+                        <span class="cz-team-member-detail__quote">Hmm, that framework sounds delicious</span>
+                        <h3 class="cz-heading-2">Likes</h3>
                         <p>Devouring websites and travel</p>
-                        <h3>Huib schrijft monsterlijk goede code voor...</h3>
+                        <h3 class="cz-heading-2">Huib schrijft monsterlijk goede code voor...</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum consectetur eros, a molestie elit maximus sed. Ut vitae sapien justo. Suspendisse ultricies semper risus vel consequat.</p>
                     </div>
                 </div>
