--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -5,7 +5,6 @@
 }
 
 .cz-footer__block {
-
     // TODO: Decide on a proper breakpoint, 520 is too small
     @media screen and (min-width: 900px) {
         float: left;
@@ -18,7 +17,7 @@
     padding: 30px;
 
     @media screen and (min-width: $cz-breakpoint-desktop) {
-        padding: 64px 128px;
+        padding: 64px 10vw;
     }
 }
 
