--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -3,6 +3,7 @@
 /* FONT */
 $cz-font-size: 16px;
 $cz-font-height: 32px;
+$cz-base-line-height: 1.2;
 
 /* COLORS */
 
@@ -12,6 +13,7 @@ $cz-color-secondary:        rgb(32,193,203);        // #20c1cb
 $cz-color-secondary-dark:   rgb(4,156,165);         // #049ca5
 
 // Fills
+$cz-fill-grey-lighter:      rgb(217,224,228);       // #D9E0E4
 $cz-fill-grey-light:        rgb(49,65,74);          // #31414a
 $cz-fill-grey:              rgb(32,42,47);          // #202a2f
 $cz-fill-grey-dark:         rgb(31,36,39);          // #1e2326
