--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <canvas id="cz-triangles-footer" class="cz-footer__triangles cz-triangles" width="0" height="0"></canvas>
 
         <section class="cz-footer__block">
-            <div class="cz-footer__block-container container">
+            <div class="cz-footer__block-container">
                 <h2 class="cz-heading-2 heading-inverse">Koffie of lunch?</h2>
                 <p class="cz-text">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
 
@@ -15,7 +15,7 @@
         </section>
 
         <section class="cz-footer__block">
-            <div class="cz-footer__block-container container">
+            <div class="cz-footer__block-container">
                 <h2 class="cz-heading-2 heading-inverse">CODEZILLA B.V.</h2>
                 <address>
                     <p class="cz-text">
