--- a/src/main.scss
+++ b/src/main.scss
@@ -22,12 +22,14 @@
 // @import 'scss/objects/button';
 
 /* Components */
+@import 'scss/components/body-container';
 @import 'scss/components/divider';
 @import 'scss/components/section';
 @import 'scss/components/footer';
 @import 'scss/components/container';
 @import 'scss/components/carousel';
 @import 'scss/components/menu';
+@import 'scss/components/navigation';
 @import 'scss/components/text';
 @import 'scss/components/media-block';
 
