--- a/src/scss/elements/page.scss
+++ b/src/scss/elements/page.scss
@@ -1,11 +1,17 @@
 @import 'scss/tools/mixins';
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: 'Helvetica Neue', Arial, Sans-serif;
     -webkit-font-smoothing: antialiased;
 
     @include cz-font-family('Light', 'Radikal');
     @include cz-font-base;
+
+    background-color: #242f34;
 }
 
 p {
