team carousel styling

--- a/src/partials/team-members.html
+++ b/src/partials/team-members.html
@@ -42,9 +42,9 @@
         <h2 class="cz-heading-1 cz-split-panels__title">Huib</h2>
         <div class="cz-split-panels__wrapper">
             <div class="cz-split-panels__panel cz-split-panels__panel--left">
-                <div class="cz-split-panels__panel-content">
-                    <div class="cz-team-member-detail">
-                        <span class="cz-team-member-detail__quote">Hmm, that framework sounds delicious</span>
+                <div class="cz-split-panels__panel-content cz-split-panels__panel-content--pad-top">
+                    <div class="cz-team-detail">
+                        <span class="cz-team-detail__quote">Hmm, that framework sounds delicious</span>
                         <h3 class="cz-heading-2">Likes</h3>
                         <p>Devouring websites and travel</p>
                         <h3 class="cz-heading-2">Huib schrijft monsterlijk goede code voor...</h3>
@@ -53,9 +53,19 @@
                 </div>
             </div>
             <div class="cz-split-panels__panel cz-split-panels__panel--right">
-                <div class="cz-split-panels__panel-bg" cz-panel-from-diamond></div>
-                <div class="cz-split-panels__panel-content">
-                    <div>Monster</div>
+                <div class="cz-split-panels__panel-bg" cz-panel-from-diamond=""></div>
+                <div class="cz-split-panels__panel-content cz-split-panels__panel-content--full-height">
+                    <div class="cz-team-carousel">
+                        <div class="cz-team-carousel__content">
+                            <div class="cz-team-carousel__img-wrapper">
+                                <img class="cz-team-carousel__img" src="/images/monsters/remymonster.svg" width="200px" height="200px" style="transform: scaleX(-1)" />
+                                <svg class="cz-team-carousel__shadow" width="40" height="20" style="transform: scaleX(2.5);bottom:8px;margin-left:-20px;">
+                                    <path d="M0 10 C 0 3, 40 3, 40 10 Z" fill="#333" fill-opacity="0.4"/>
+                                    <path d="M0 10 C 0 17, 40 17, 40 10 Z" fill="#333" fill-opacity="0.4"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
