--- a/src/main.scss
+++ b/src/main.scss
@@ -31,6 +31,8 @@
 @import 'scss/components/media-block';
 @import 'scss/components/team-detail';
 @import 'scss/components/team-carousel';
+@import 'scss/components/monster-img';
+@import 'scss/components/body';
 
 @import 'scss/components/diamond-grid';
 @import 'scss/components/split-panel';
