--- a/src/partials/team-members.html
+++ b/src/partials/team-members.html
@@ -3,37 +3,11 @@
         <div class="cz-diamond-grid">
             <div class="cz-diamond-grid__inner">
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
-                </div>
-                <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond=""></div>
+                    <div class="cz-diamond" cz-diamond="">
+                        <div class="monster-img monster-img--has-shadow">
+                            <img style="transform: translate(10px, 10px) scaleX(-1)" src="/images/monsters/remymonster.svg" width="200px" height="200px" style="transform: scaleX(-1)" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -58,11 +32,9 @@
                     <div class="cz-team-carousel">
                         <div class="cz-team-carousel__content">
                             <div class="cz-team-carousel__img-wrapper">
-                                <img class="cz-team-carousel__img" src="/images/monsters/remymonster.svg" width="200px" height="200px" style="transform: scaleX(-1)" />
-                                <svg class="cz-team-carousel__shadow" width="40" height="20" style="transform: scaleX(2.5);bottom:8px;margin-left:-20px;">
-                                    <path d="M0 10 C 0 3, 40 3, 40 10 Z" fill="#333" fill-opacity="0.4"/>
-                                    <path d="M0 10 C 0 17, 40 17, 40 10 Z" fill="#333" fill-opacity="0.4"/>
-                                </svg>
+                                <div class="monster-img monster-img--has-shadow">
+                                    <img style="transform: translate(10px, 10px) scaleX(-1)" src="/images/monsters/remymonster.svg" width="200px" height="200px" style="transform: scaleX(-1)" />
+                                </div>
                             </div>
                         </div>
                     </div>
