--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -22,6 +22,9 @@
 </head>
 <body>
     {{> menu }}
+    <div class="cz-logo">
+        <img class="cz-logo__image" src="/images/logo-light.svg" />
+    </div>
     <div id="body-container" class="cz-body-container">
         <div id="body-container-overlay" class="cz-body-container__loader-overlay"></div>
         {{> header }}
