--- a/src/main.scss
+++ b/src/main.scss
@@ -29,7 +29,7 @@
 @import 'scss/components/container';
 @import 'scss/components/carousel';
 @import 'scss/components/menu';
-@import 'scss/components/navigation';
+@import 'scss/components/logo';
 @import 'scss/components/text';
 @import 'scss/components/media-block';
 
