--- a/src/scss/components/body-container.scss
+++ b/src/scss/components/body-container.scss
@@ -2,16 +2,19 @@
     position: relative;
     min-height: 100%;
     background-color: #fff;
-    transition: transform 500ms;
-    z-index: -1;
+    transition: transform 300ms;
+    z-index: 0;
+    overflow-x: hidden;
+    transform-origin: top right; // Has to be set on the container, or weird jumping occurs
 }
 
 .cz-body-container--skewed {
-    transform: translate(100px, 50px) skew(0deg, -4deg) scale(0.9);
+    transform: translate(0, 150px) skew(0deg, -5deg) scale(0.7);
 }
 
 .cz-body-container__loader-overlay {
-    display: none;
+    transition: visibility 300ms;
+    visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -25,7 +28,7 @@
     z-index: 999;
 
     &:after {
-        content: 'Loading bitches...';
+        content: 'Loading...';
         display: block;
         position: relative;
         top: 300px;
@@ -33,5 +36,5 @@
 }
 
 .cz-body-container__loader-overlay--active {
-    display: block;
+    visibility: visible;
 }
