--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,5 +1,5 @@
 $color-fill: #fff;
-$base-size: 90px;
+$base-size: 40px;
 $line-height: 16%;
 $text-height: 30%;
 
@@ -7,42 +7,53 @@ $mb-duration: 800ms;
 $mb-easing: cubic-bezier(0.68, -0.55, 0.4, 1.3);
 $mb-easing-alt: cubic-bezier(0.68, -0.3, 0.2, 1.55);
 
-.mb-menu {
-  width: $base-size;
-  height: $base-size * 0.84;
-  border: none;
-  cursor: pointer;
-  background-color: transparent;
-  padding: 0;
-  margin: 0;
-  position: relative;
-  z-index: 2;
-
-  //Debugging
-  // &:after {
-  //   content: '';
-  //   background-color: #0f0;
-  //   opacity: 0.5;
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   bottom: 0;
-  //   right: 0;
-  // }
-  // &:before {
-  //   content: '';
-  //   background-color: #f00;
-  //   opacity: 0.5;
-  //   position: absolute;
-  //   left: 10%;
-  //   top: 10%;
-  //   bottom: 10%;
-  //   right: 10%;
-  // }
+.cz-menu {
+    position: absolute;
+    top: 50px;
+    left: 70px;
+    height: 100%;
 }
 
-.mb-menu--active {
-  .menu__line { 
+.cz-menu__list {
+    position: relative;
+    margin: 100px 0 0 0;
+    padding: 0;
+    list-style: none;
+}
+
+.cz-navigation__list-item {
+    margin: 18px 0;
+}
+
+.cz-navigation__list-link {
+    font-size: 24px;
+    text-decoration: none;
+    opacity: .5;
+
+    &:hover {
+        opacity: 1;
+
+        @include cz-divider();
+    }
+}
+
+.cz-menu__button {
+    width: $base-size;
+    height: $base-size * 0.84;
+}
+
+.cz-menu-button {
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    z-index: 2;
+}
+
+.cz-menu-button--active {
+  .cz-menu-button__line {
     transition-timing-function: $mb-easing;
      &:first-of-type {
           transform: rotate(45deg) translate(10%, -80%);
@@ -51,13 +62,13 @@ $mb-easing-alt: cubic-bezier(0.68, -0.3, 0.2, 1.55);
           transform: rotate(-45deg) translate(9%, -215%);
       }
   }
-  .menu__text {
+  .cz-menu-button__text {
     transform: translateY(40%) scaleY(0.8);
     opacity:0;
   }
 }
 
-.menu__line { 
+.cz-menu-button__line { 
   background-color: $color-fill;
   width: 100%;
   height: $line-height;
@@ -80,7 +91,7 @@ $mb-easing-alt: cubic-bezier(0.68, -0.3, 0.2, 1.55);
   }
 }
 
-.menu__text {
+.cz-menu-button__text {
   fill: $color-fill;
   height: $text-height;
   width: 104%;
