--- a/src/partials/team-members.html
+++ b/src/partials/team-members.html
@@ -3,16 +3,84 @@
         <div class="cz-diamond-grid">
             <div class="cz-diamond-grid__inner">
                 <div class="cz-diamond-grid__block">
-                    <div class="cz-diamond" cz-diamond="">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="remy">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
                         <div class="monster-img monster-img--has-shadow">
-                            <img style="transform: translate(10px, 10px) scaleX(-1)" src="/images/monsters/remymonster.svg" width="200px" height="200px" style="transform: scaleX(-1)" />
+                            <img class="monster-img__img" src="/images/monsters/remymonster.svg" width="200px" height="200px" />
                         </div>
+                        <div class="cz-diamond__title">Remy</div>
                     </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="jelle">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
+                        <div class="monster-img monster-img--has-shadow">
+                            <img class="monster-img__img" src="/images/monsters/jellemonster.svg" width="200px" height="200px" />
+                        </div>
+                        <div class="cz-diamond__title">Jelle</div>
+                    </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="nico">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
+                        <div class="monster-img monster-img--has-shadow">
+                            <img class="monster-img__img" src="/images/monsters/nicomonster.svg" width="200px" height="200px" />
+                        </div>
+                        <div class="cz-diamond__title">Nico</div>
+                    </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="patrick">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
+                        <div class="monster-img monster-img--has-shadow">
+                            <img class="monster-img__img" src="/images/monsters/patrickmonster.svg" width="200px" height="200px" />
+                        </div>
+                        <div class="cz-diamond__title">Patrick</div>
+                    </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="rome">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
+                        <div class="monster-img monster-img--has-shadow">
+                            <img class="monster-img__img" src="/images/monsters/romemonster.svg" width="200px" height="200px"  />
+                        </div>
+                        <div class="cz-diamond__title">Rome</div>
+                    </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="arno">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
+                        <div class="monster-img monster-img--has-shadow">
+                            <img class="monster-img__img" src="/images/monsters/arnomonster.svg" width="200px" height="200px" />
+                        </div>
+                        <div class="cz-diamond__title">Arno</div>
+                    </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="ming">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
+                        <div class="monster-img monster-img--has-shadow">
+                            <img class="monster-img__img" src="/images/monsters/mingmonster.svg" width="200px" height="200px"  />
+                        </div>
+                        <div class="cz-diamond__title">Ming</div>
+                    </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond" cz-team-member="tjin">
+                        <div class="cz-diamond__shape" cz-diamond-shape=""></div>
+                        <div class="monster-img monster-img--has-shadow">
+                            <img class="monster-img__img" src="/images/monsters/tjinmonster.svg" width="200px" height="200px"  />
+                        </div>
+                        <div class="cz-diamond__title">Tjin</div>
+                    </div>
+                </div>
+                <div class="cz-diamond-grid__block">
+                    <div cz-diamond="" class="cz-diamond cz-diamond--spacer"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div cz-diamond-split-panel class="cz-split-panels cz-split-panels--overlay" style="display: none">
+    <div cz-diamond-split-panel cz-team-member="remy" class="cz-split-panels cz-split-panels--overlay" style="display: none">
         <h2 class="cz-heading-1 cz-split-panels__title">Huib</h2>
         <div class="cz-split-panels__wrapper">
             <div class="cz-split-panels__panel cz-split-panels__panel--left">
@@ -32,8 +100,38 @@
                     <div class="cz-team-carousel">
                         <div class="cz-team-carousel__content">
                             <div class="cz-team-carousel__img-wrapper">
-                                <div class="monster-img monster-img--has-shadow">
-                                    <img style="transform: translate(10px, 10px) scaleX(-1)" src="/images/monsters/remymonster.svg" width="200px" height="200px" style="transform: scaleX(-1)" />
+                                <div class="monster-img monster-img--has-shadow monster-img--large">
+                                    <img class="monster-img__img" src="/images/monsters/remymonster.svg" width="200px" height="200px"  />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div cz-diamond-split-panel cz-team-member="jelle" class="cz-split-panels cz-split-panels--overlay" style="display: none">
+        <h2 class="cz-heading-1 cz-split-panels__title">Jelle</h2>
+        <div class="cz-split-panels__wrapper">
+            <div class="cz-split-panels__panel cz-split-panels__panel--left">
+                <div class="cz-split-panels__panel-content cz-split-panels__panel-content--pad-top">
+                    <div class="cz-team-detail">
+                        <span class="cz-team-detail__quote">Hmm, that framework sounds delicious</span>
+                        <h3 class="cz-heading-2">Likes</h3>
+                        <p>Devouring websites and travel</p>
+                        <h3 class="cz-heading-2">Huib schrijft monsterlijk goede code voor...</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum consectetur eros, a molestie elit maximus sed. Ut vitae sapien justo. Suspendisse ultricies semper risus vel consequat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="cz-split-panels__panel cz-split-panels__panel--right">
+                <div class="cz-split-panels__panel-bg" cz-panel-from-diamond=""></div>
+                <div class="cz-split-panels__panel-content cz-split-panels__panel-content--full-height">
+                    <div class="cz-team-carousel">
+                        <div class="cz-team-carousel__content">
+                            <div class="cz-team-carousel__img-wrapper">
+                                <div class="monster-img monster-img--has-shadow monster-img--large">
+                                    <img class="monster-img__img" src="/images/monsters/jellemonster.svg" width="200px" height="200px" />
                                 </div>
                             </div>
                         </div>
