--- a/src/scss/components/split-panel.scss
+++ b/src/scss/components/split-panel.scss
@@ -5,6 +5,7 @@
     position: relative;
     background: #fff;
     overflow: hidden;
+    z-index: 1;
 
     &:before{
         content:"";
@@ -22,18 +23,13 @@
 
 .cz-split-panels--overlay{
     position: fixed;
-    overflow: scroll;
+    overflow-y: auto;
     top:0;
     left:0;
     opacity: 0;
     transition: opacity ease-out 0.3s;
     transform: translate3d(0,0,0);
     height: 100%;
-
-    @include min-width("tablet") {
-        position: absolute;
-        overflow: hidden;
-    }
 }
 
 .cz-split-panels--active{
@@ -42,9 +38,9 @@
 
 .cz-split-panels__wrapper {
     display: flex;
-    height: 100%;
     justify-content: space-around;
     flex-flow: column;
+    min-height: 100%;
 
     @include min-width("tablet") {
         flex-flow: row;
@@ -100,12 +96,17 @@
         position: absolute;
         top:10px;
         right:0;
+
+        @include max-width('tablet') {
+            top:-40px;
+            right:-25px;
+            transform: scale(0.7);
+        }
     }
 }
 
 .cz-split-panels__panel-bg--animate {
-    transition:
-        transform $diamond-anim-speed $diamond-anim-ease;
+    transition: transform $diamond-anim-speed $diamond-anim-ease;
 }
 
 .cz-split-panels__title {
@@ -115,6 +116,12 @@
     width:100%;
     text-align: center;
     z-index: 1;
+
+    @include max-width('tablet') {
+        text-align: left;
+        font-size: 24px;
+        padding: 0 30px;
+    }
 }
 
 .cz-split-panels-combiner {
