--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -29,12 +29,24 @@ $mb-easing-alt: cubic-bezier(0.68, -0.3, 0.2, 1.55);
     font-size: 24px;
     text-decoration: none;
     opacity: .5;
+    padding-bottom: 3px;
+
+    &:after {
+        display: block;
+        content: ' ';
+        height: 3px;
+    }
 
     &:hover {
         opacity: 1;
+        padding-bottom: 0;
 
-        @include cz-divider();
+        &:after {
+            content: ' ';
+            @include cz-divider();
+        }
     }
+
 }
 
 .cz-menu__button {
