--- a/src/scss/tools/divider.scss
+++ b/src/scss/tools/divider.scss
@@ -1,4 +1,4 @@
-@mixin cz-divider($position: "center", $size: "large") {
+@mixin cz-divider($position: "left", $size: "small") {
     display: block;
     height: 3px;
     width: 40px;
