Tweaked header logo

--- a/src/scss/components/logo.scss
+++ b/src/scss/components/logo.scss
@@ -4,9 +4,9 @@
     width: 100%;
     top: 50px;
     justify-content: center;
+    z-index: 2;
 }
 
 .cz-logo__image {
-    width: 300px;
-    height: 60px;
+    width: 260px;
 }
