--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -23,7 +23,7 @@
 <body>
     {{> menu }}
     <div class="cz-logo">
-        <img class="cz-logo__image" src="/images/logo-light.svg" />
+        <a href="/"><img class="cz-logo__image" src="/images/logo-light.svg" /></a>
     </div>
     <div id="body-container" class="cz-body-container">
         <div id="body-container-overlay" class="cz-body-container__loader-overlay"></div>
