Header is now dynamic; eg. all pages based on layout.html can pass three variables to place content in the header

--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-    {{> header }}
+    {{> header header = header }}
 
     {{{ contents }}}
 
