--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,14 +3,12 @@
     {{> menu }}
     <ul class="cz-carousel cz-list-reset">
         <li>
-            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('http://lorempixel.com/1200/1920/technics/4')"></div> 
+            <div class="cz-carousel__image cz-image-focus-right" style="background-image:url('{{header.image}}')"></div> 
             <div class="cz-carousel__content">
-                <h1 class="cz-carousel__title">It's never our fault if it's crooked</h1>
+                <h1 class="cz-carousel__title">{{ header.title }}</h1>
                 <div class="cz-divider"></div>
                 <p class="cz-carousel__slogan">
-                    Always code as if the guy <br />
-                    who ends up maintaining your code will be a <br />
-                    violent psychopath who knows where you live.
+                    {{{ header.slogan }}}
                 </p>
             </div>
         </li>
