team pagina progress

--- a/src/scss/components/divider.scss
+++ b/src/scss/components/divider.scss
@@ -1,7 +1,7 @@
 @import 'scss/tools/divider';
 
 .cz-divider {
-    @include cz-divider("", "");
+    @include cz-divider();
 }
 
 .cz-divider--center-desktop {
