--- a/src/main.scss
+++ b/src/main.scss
@@ -31,6 +31,7 @@
 @import 'scss/components/menu';
 @import 'scss/components/text';
 @import 'scss/components/media-block';
+@import 'scss/components/triangles';
 
 /* Utilities */
 @import 'scss/utilities/utilities';
