--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,15 @@
 <footer class="cz-footer">
     <div class="cz-footer__blocks">
-        <canvas id="cz-triangles-footer" class="cz-footer__triangles cz-triangles" width="0" height="0"></canvas>
+        <div class="cz-triangles-static cz-header__background"></div>
 
         <section class="cz-footer__block">
             <div class="cz-footer__block-container">
                 <h2 class="cz-heading-2 heading-inverse">Koffie of lunch?</h2>
                 <div class="cz-divider"></div>
-                <p class="cz-text">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
+                <p class="cz-text cz-text-inverse">Klinkt wat we doen en hoe we werken aantrekkelijk en interessant? Voor een kop koffie of lunch maken we altijd tijd.</p>
 
                 <h3 class="cz-heading-3 heading-inverse">Bel of mail ons</h3>
-                <p class="cz-text">
+                <p class="cz-text cz-text-inverse">
                     <a class="cz-text" href="tel:+31 (0) 20 3120 458">020 - 3120 458</a> of <a class="cz-text" href="mailto:info@codezilla.nl">info@codezilla.nl</a>
                 </p>
             </div>
@@ -20,13 +20,13 @@
                 <h2 class="cz-heading-2 heading-inverse">CODEZILLA B.V.</h2>
                 <div class="cz-divider"></div>
                 <address>
-                    <p class="cz-text">
+                    <p class="cz-text cz-text-inverse">
                         Hoogoorddreef 9<br />
                         1101 BA AMSTERDAM (Nabij de Arena)<br />
                         KVK nr. 62653229
                     </p>
                 </address>
-                <p class="cz-text">
+                <p class="cz-text cz-text-inverse">
                     Tel: <a class="cz-text" href="tel:+31 (0) 20 3120 458">020 - 3120 458</a><br />
                     Email: <a class="cz-text" href="mailto:info@codezilla.nl">info@codezilla.nl</a>
                 </p>
