--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="cz-header">
-    <canvas class="cz-triangles cz-header__background" id="cz-triangles-header" width="0" height="0"></canvas>
+    <div class="cz-triangles-static cz-header__background"></div>
     {{> menu }}
     <ul cz-carousel class="cz-carousel cz-list-reset">
         <li>
