--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -3,7 +3,7 @@
 .cz-footer__blocks {
     display: flex;
     flex-direction: column;
-    background-color: $cz-fill-grey-dark;
+    position: relative;
 
     @media screen and (min-width: $cz-max-width-desktop) {
         flex-direction: row;
@@ -16,12 +16,8 @@
     pointer-events: none; // Pass click through to triangles
 
     @media screen and (min-width: $cz-breakpoint-desktop) {
-        &:nth-of-type(1) {
-            background-color: rgba(26, 33, 26, .5);
-        }
-
         &:nth-of-type(2) {
-            background-color: rgba(0, 0, 0, .25);
+            background-color: rgba(0, 0, 0, .10);
         }
     }
 
