--- a/src/scss/components/text.scss
+++ b/src/scss/components/text.scss
@@ -7,11 +7,17 @@
 
 .cz-text-inverse{
     @include cz-font-family('Regular', 'Radikal');
-    color: $cz-text-inverse;
+
+    &, a, a:hover {
+        color: $cz-text-inverse;
+    }
 }
 
 .cz-text-link-inverse {
     @include cz-font-family('Regular', 'Radikal');
-    color: $cz-text-inverse;
+
+    &, a, a:hover {
+        color: $cz-text-inverse;
+    }
 }
 
