--- a/src/scss/settings/variables.scss
+++ b/src/scss/settings/variables.scss
@@ -21,7 +21,7 @@ $cz-fill-light:             rgb(255,255,255);       // #ffffff
 $cz-text-heading:           $cz-fill-grey;
 $cz-text-heading-inverse:   $cz-fill-light;
 $cz-text:                   $cz-fill-grey-light;
-$cz-text-inverse:           $cz-fill-light;
+$cz-text-inverse:           rgba(255,255,255,0.7);
 
 // Contexts
 $cz-color-shadow:           rgb(226,231,233);       // #e2e7e9
