--- a/src/scss/components/text.scss
+++ b/src/scss/components/text.scss
@@ -5,7 +5,7 @@
     color: $cz-text;
 }
 
-.cz-text-inverse{
+.cz-text-inverse {
     @include cz-font-family('Regular', 'Radikal');
 
     &, a, a:hover {
@@ -13,11 +13,10 @@
     }
 }
 
-.cz-text-link-inverse {
+.cz-text-inverse--light {
     @include cz-font-family('Regular', 'Radikal');
 
     &, a, a:hover {
-        color: $cz-text-inverse;
+        color: $cz-text-inverse-light;
     }
 }
-
